Update : new file edit

--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
   
   <div class="carousel owl-carousel">
     <div class="card card-1">
-      <img src="./image/disccrd-1.png" alt="Image 1">
+      <img src="./image/disccrd-1.jpg" alt="Image 1">
     </div>
   
 
     <div class="card card-2">
-      <img src="./image/disccrd-2.png" alt="Image 1">
+      <img src="./image/disccrd-2.jpg" alt="Image 1">
     </div>
 
     <div class="card card-3">
-      <img src="./image/disccrd-3.png" alt="Image 1">
+      <img src="./image/disccrd-3.jpg" alt="Image 1">
     </div>
 
   </div>
