--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <swiper-container class="mySwiper" navigation="true">
       <swiper-slide>
-      <a href="" class="box">
+      <a href="./2pgburger/2pgburger.html" class="box">
         <img src="image/menu-1.png" alt="">
         <div class="content">
           <h3>Burger</h3>
@@ -123,7 +123,7 @@
     </swiper-slide>
       
     <swiper-slide>
-      <a href="" class="box">
+      <a href="./2pgpizza/2pgpizza.html" class="box">
         <img src="image/menu-2.png" alt="">
         <div class="content">
           <h3>Pizza</h3>
@@ -134,7 +134,7 @@
 
   
     <swiper-slide>
-      <a href="" class="box">
+      <a href="./2pgrolls/2pgrolls.html" class="box">
         <img src="image/menu-3.png" alt="">
         <div class="content">
           <h3>Rolls</h3>
