--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 
   <!-- footer section starts  -->
 
-  <!--<section class="footer">
+  <section class="footer">
 
 
     <div class="box-container">
