Update : new file edit

--- a/index.html
+++ b/index.html
@@ -80,19 +80,7 @@
   </div>
 </section>
 
-  <!-- <section class="home" id="home">
-
-    <div class="swiper-container">
-      <div class="swiper-wrapper swipe">
-        <div class="swiper-slide">
-          <img src="./image/blog-1.jpg" alt="Image 1">
-        </div>
-       
-      </div>
-    </div>
-
-  </section> -->
-
+  
   <!-- home section ends  -->
 
 
@@ -192,7 +180,7 @@
       <a href="#" class="box">
         <img src="image/menu-8.png" alt="">
         <div class="content">
-          <h3>Indian Thali</h3>
+          <h3 style="font-size: 17px;">Indian Thali</h3>
           <div class="price"></div>
         </div>
       </a>
@@ -282,7 +270,7 @@
             <span> (142) </span>
           </div>
           <div class="price"><span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -302,7 +290,7 @@
             <span> (229) </span>
           </div>
           <div class="price"><span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -322,7 +310,7 @@
             <span> (74) </span>
           </div>
           <div class="price"><span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -342,7 +330,7 @@
             <span> (56) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -362,7 +350,7 @@
             <span> (122) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -382,7 +370,7 @@
             <span> (156) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -402,7 +390,7 @@
             <span> (70) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -422,7 +410,7 @@
             <span> (340) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
 
@@ -443,13 +431,14 @@
             <span> (340) </span>
           </div>
           <div class="price"> <span></span></div>
-          <a href="#" class="btn">View More...</a>
+          <a href="#" class="btn">View More ➜</a>
         </div>
       </div>
+      
+    </div> <br>
+    <a href="#" class="btn" style="background-color: rgb(255, 5, 5); padding: 10px;">View More Brand ➜</a>
 
-    </div>
-
-  </section> -->
+  </section> 
 
   <!-- popular section ends -->
 
@@ -498,7 +487,7 @@
 
   <!-- blogs section starts  -->
 
-  <!-- <section class="blogs" id="blogs">
+  <section class="blogs" id="blogs">
 
     <div class="heading">
       <span>our blogs</span>
@@ -563,7 +552,7 @@
 
     </div>
 
-  </section> -->
+  </section> 
 
   <!-- blogs section ends -->
 
