Update : new file edit

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <a href="#" class="box">
         <img src="image/menu-8.png" alt="">
         <div class="content">
-          <h3 style="font-size: 17px;">Indian Thali</h3>
+          <h3>Thali</h3>
           <div class="price"></div>
         </div>
       </a>
