Update : new file edit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div id="social" class="fas fa-search"></div>
       <div id="social" class="fas fa-shopping-cart"></div>
 
-      <a href="./sinupfrm.html">
+      <a href="./sininfrm.html">
         <div id="social" class="fas fa-user"></div>
       </a>
 
