Update : new file edit

--- a/2pgburger/2pgburger.html
+++ b/2pgburger/2pgburger.html
@@ -91,7 +91,7 @@
 }
 
 .header .logo {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bolder;
   color: #130f40;
 }
@@ -113,10 +113,10 @@
 }
 
 .header .icons div {
-  height: 4.5rem;
-  width: 4.5rem;
-  line-height: 4.5rem;
-  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem;
+  font-size: 1.5rem;
   background: #f7f7f7;
   color: #130f40;
   border-radius: .5rem;
@@ -225,7 +225,7 @@
         }
 
         .menu .box-container .box .content .stars i {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             color: var(--green);
         }
 
@@ -295,7 +295,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/dd434d7cd80de42b3d04cb979aeacb46" alt="">
+                    <img src="./burgerpg1.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -318,7 +318,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/cvqb24o2vlkd967jzzas" alt="">
+                    <img src="./burgerpg2.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -340,7 +340,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/deyyaxafzufypp1xtpij" alt="">
+                    <img src="./burgerpg3.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -363,7 +363,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/42bb41e314e0f1c3d2a1ece7fec9c942" alt="">
+                    <img src="./burgerpg4.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -385,7 +385,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/b85e6c16297b0c9127b8d08c93293cf7" alt="">
+                    <img src="./burgerpg5.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -407,7 +407,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://5.imimg.com/data5/OR/KH/MY-33353830/mcspicy-paneer-burger-500x500.png" alt="">
+                    <img src="./burgerpg6.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -430,7 +430,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/93f87dfb7cce0905c527ffd76312ea6d" alt="">
+                    <img src="./burgerpg7.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -452,7 +452,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/5c4ddd549b9709a00abc94412eec940c" alt="">
+                    <img src="./burgerpg8.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -474,7 +474,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://cdn4.singleinterface.com/files/banner_images/34404/7532_1624879318_Familyfeast310x236.jpg" alt="">
+                    <img src="./burgerpg9.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -497,7 +497,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://cdn4.singleinterface.com/files/banner_images/34404/9672_1624882763_ChickenKrispersCombo310x236.jpg" alt="">
+                    <img src="./burgerpg10.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -519,7 +519,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://cdn4.singleinterface.com/files/banner_images/34404/3705_1624883321_BuddyMealmedPopCorn310x236px.jpg" alt="">
+                    <img src="./burgerpg11.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -541,7 +541,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://cdn4.singleinterface.com/files/banner_images/34404/4193_1625641938_kfcfavorites.jpg" alt="">
+                    <img src="./burgerpg12.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -564,7 +564,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/md9oorm6eku5e4nktmuy" alt="">
+                    <img src="./burgerpg13.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -586,7 +586,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/sgnlylsa7gqijo2qydq3" alt="">
+                    <img src="./burgerpg14.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -608,7 +608,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/rbsdsxa1esuwgdh3bsh0" alt="">
+                    <img src="./burgerpg15.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -737,7 +737,7 @@
 
         window.onload = fadeOut
 
-
+</script>
            </body> 
 		
 		</html>
