--- a/2pgpizza/2pgpizza.html
+++ b/2pgpizza/2pgpizza.html
@@ -89,7 +89,7 @@
 }
 
 .header .logo {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bolder;
   color: #130f40;
 }
@@ -111,10 +111,10 @@
 }
 
 .header .icons div {
-  height: 4.5rem;
-  width: 4.5rem;
-  line-height: 4.5rem;
-  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem;
+  font-size: 1.5rem;
   background: #f7f7f7;
   color: #130f40;
   border-radius: .5rem;
@@ -292,7 +292,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://api.pizzahut.io/v1/content/en-in/in-1/images/pizza/margherita.90f9451fd66871fb6f9cf7d506053f18.1.jpg" alt="">
+                    <img src="./pizza-1.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -315,7 +315,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/81fbe5f6e8576cc7bdae699c3900197c" alt="">
+                    <img src="./pizza-2.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -337,7 +337,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/ed6a84173f69cdd4f676e94c2332c5e7" alt="">
+                    <img src="./pizza-3.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -360,7 +360,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://api.pizzahut.io/v1/content/en-in/in-1/images/pizza/veggie-feast.3777f9846c8e993276a25838b8737ea7.1.jpg" alt="">
+                    <img src="./pizza-4.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -382,7 +382,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/c375e9a628bc7110e06a2b379c0a8b3c" alt="">
+                    <img src="./pizza-5.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -404,7 +404,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/f7ef8df0fed856ee03c983f156fbb68d" alt="">
+                    <img src="./pizza-6.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -427,7 +427,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/qgifc0xjqohk4voxoihv" alt="">
+                    <img src="./pizza-7.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -449,7 +449,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_1024/9afd83812df063abadf4b0392e142507" alt="">
+                    <img src="./pizza-8.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -471,7 +471,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="https://lh3.googleusercontent.com/Cst1b2LCSsuCJmUWRBIOiwPU2p-d8uZ1UuWy-AOceeOZQC0zbrBWx7HyMX_tQeo_7SK0JsLdmtipZMCmn9PD9ovvZ9tmE4-et3ktVQI=w200-rw" alt="">
+                    <img src="./pizza-9.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -494,7 +494,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-10.png" alt="">
+                    <img src="./pizza-10.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -516,7 +516,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-11.png" alt="">
+                    <img src="./pizza-11.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -538,7 +538,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-12.png" alt="">
+                    <img src="./pizza-12.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -561,7 +561,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-13.png" alt="">
+                    <img src="./pizza-13.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -583,7 +583,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-14.png" alt="">
+                    <img src="./pizza-14.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -605,7 +605,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgpizza\pizza-15.png" alt="">
+                    <img src="./pizza-15.png" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -733,7 +733,7 @@
         }
 
         window.onload = fadeOut
-
+</script>
 
            </body> 
 		
