--- a/2pgrolls/2pgrolls.html
+++ b/2pgrolls/2pgrolls.html
@@ -91,7 +91,7 @@
 }
 
 .header .logo {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bolder;
   color: #130f40;
 }
@@ -113,10 +113,10 @@
 }
 
 .header .icons div {
-  height: 4.5rem;
-  width: 4.5rem;
-  line-height: 4.5rem;
-  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem;
+  font-size: 1.5rem;
   background: #f7f7f7;
   color: #130f40;
   border-radius: .5rem;
@@ -289,13 +289,13 @@
     <section class="menu" id="menu">
 
         <h3 class="sub-heading">Foodies Choose Your Favourite</h3>
-        <h1 class="heading"> Burger Lovers </h1>
+        <h1 class="heading"> Roll Lovers </h1>
 
         <div class="box-container">
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg1.jpg" alt="">
+                    <img src="./2pgroll-1.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -308,7 +308,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 52 Rating </span>
                     </div>
-                    <h3>2 X Mixed Chicken Burger </h3>
+                    <h3>Classic Chicken Roll </h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -318,7 +318,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg2.jpg" alt="">
+                    <img src="./2pgroll-2.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -330,7 +330,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>2 X Veg Krisper Burger</h3>
+                    <h3>Double Chicken Roll</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -340,7 +340,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg3.jpg" alt="">
+                    <img src="./2pgroll-3.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -352,7 +352,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>Crispy Veg Combo</h3>
+                    <h3>Classic Chicken Roll & Pepsi Combo</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -363,7 +363,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgburger\burgerpg4.png" alt="">
+                    <img src="./2pgroll-4.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -375,7 +375,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>McVeggie Burger</h3>
+                    <h3>Double Chicken Roll & Pepsi Combo</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -385,7 +385,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg5.png" alt="">
+                    <img src="./2pgroll-5.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -397,7 +397,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>Veg Maharaja Mac</h3>
+                    <h3>ouble Chicken Roll Meal for 2</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -407,7 +407,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="D:\z2nd page menu rb food\2pgburger\burgerpg6.png" alt="">
+                    <img src="./2pgroll-6.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -419,7 +419,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>McSpicy Paneer Burger</h3>
+                    <h3>Aloo Roll RnR</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -430,7 +430,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg7.png" alt="">
+                    <img src="./2pgroll-7.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -442,7 +442,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>2 McVeggie Burger+Fries + 2 Coke</h3>
+                    <h3>Chicken Roll RnR</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -452,7 +452,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg8.png" alt="">
+                    <img src="./2pgroll-8.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -464,7 +464,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>1 Crispy Chicken + Med Fries</h3>
+                    <h3>Manchurian Roll RnR</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -474,7 +474,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg9.png" alt="">
+                    <img src="./2pgroll-9.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -486,7 +486,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>3 X Chicken+fries+coke family combo </h3>
+                    <h3>Mix Veg Roll RnR </h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -497,7 +497,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg10.png" alt="">
+                    <img src="./2pgroll-10.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -509,7 +509,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>2 X Chicken Krisper Burger Combo</h3>
+                    <h3>Noodles Roll RnR</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -519,7 +519,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg11.png" alt="">
+                    <img src="./2pgroll-11.jpg" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -531,7 +531,7 @@
                         <i class="fas fa-star-half-alt"></i>
 						<span> 49 Rating </span>
                     </div>
-                    <h3>Chicken Burger Buddy Meal</h3>
+                    <h3>Rock N Roll Special Chicken Roll RnR</h3>
                     <p></p>
 					<span class="price">Rs 179.00</span><br>
                     <a href="#" class="btn">add to cart</a>
@@ -541,7 +541,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg12.jpg" alt="">
+                    <img src="" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -564,7 +564,7 @@
 			
 			<div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg13.png" alt="">
+                    <img src="" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -586,7 +586,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg14.png" alt="">
+                    <img src="" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -608,7 +608,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="\z2nd page menu rb food\2pgburger\burgerpg15.png" alt="">
+                    <img src="" alt="">
                     <a href="#" class="fas fa-heart"></a>
                 </div>
                 <div class="content">
@@ -737,7 +737,7 @@
 
         window.onload = fadeOut
 
-
+</script>
            </body> 
 		
 		</html>
