--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
     <div class="bottom">
 
 
-      <div class="credit"><span>RB Food</span> | all rights reserved </div>
+      <div class="credit"><span>⤍ RB Food ⤌</span></div>
 
     </div>
 
