Update : new file edit

--- a/2pgpizza/2pgpizza.html
+++ b/2pgpizza/2pgpizza.html
@@ -256,7 +256,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-utensils"></i> RB Food </a>
+    <a href="#" class="logo"> <img src="./logo-1.png"> </a>
     
     <nav class="navbar">
         <a href="#home"></a>
