--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </div>
 
-  </header> <br>
+  </header> 
 
   <!-- header section ends  -->
 
@@ -61,7 +61,7 @@
 
   <section class="home" id="home">
   
-  <div class="carousel owl-carousel">
+  <div class="carousel owl-carousel" >
     <div class="card card-1">
      <img src="./image/disccrd-1.jpg"   alt="Image 1">
     </div>
