--- a/2pgburger/2pgburger.html
+++ b/2pgburger/2pgburger.html
@@ -258,7 +258,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-utensils"></i> RB Food </a>
+    <a href="#" class="logo"> <img src="./logo-1.png"> </a>
     
     <nav class="navbar">
         <a href="#home"></a>
