Update : new file edit

--- a/kfcpg.html
+++ b/kfcpg.html
@@ -286,7 +286,7 @@
     <section class="menu" id="menu">
 
         <h3 class="sub-heading">Foodies Choose Your Favourite</h3>
-        <h1 class="heading"> Burger Lovers </h1>
+        <h1 class="heading">KFC Lover </h1>
 
         <div class="box-container">
 
